# phia-hackathon

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
apps/backend/: .env.example  Dockerfile  Dockerfile.closet_enrichment_worker  Dockerfile.fit_score_worker  README.md  pyproject.toml  railway.avatar-worker.toml  railway.reverse-search-worker.toml  railway.toml  railway.tryon-editorial-worker.toml  railway.tryon-video-worker.toml  railway.tryon-worker.toml
apps/backend/scripts/: benchmark_tryon_providers.py  demo_worn_by_zara_cropped_fireman.json  migrate_tryon_video_path.py  reverse_search_smoketest.py  seed_demo_tryon_video.py  seed_demo_worn_by.py
apps/backend/src/mirror/: main.py
apps/backend/src/mirror/api/: app.py
apps/backend/src/mirror/api/routers/: avatar.py  catalog.py  closet.py  fit_score.py  health.py  price.py  reverse_search.py  tryon.py
apps/backend/src/mirror/core/: auth.py  config.py  errors.py  logging_config.py  product_catalog.py  tryon_fashn_category.py  tryon_logic.py  tryon_preprocess.py
apps/backend/src/mirror/core/closet/: enrichment.py
apps/backend/src/mirror/core/fit_score/: closet_snapshot.py  schemas.py  service.py
apps/backend/src/mirror/core/visual_search/: __init__.py  apify_client.py  apify_instagram.py  apify_pinterest.py  composite.py  interface.py  mock.py  providers.py  serpapi.py  service.py  zara_fetch.py  zara_query.py
apps/backend/src/mirror/core/visual_search/brand_tuning/: __init__.py  zara.py
apps/backend/src/mirror/integrations/: fashn_direct_tryon.py  gemini_avatar.py  gemini_closet_attributes.py  gemini_fit_score.py  gemini_person_filter.py  gemini_tryon_editorial.py  gemini_video.py  supabase_client.py
apps/backend/src/mirror/workers/: avatar_worker.py  closet_enrichment_worker.py  fit_score_worker.py  reverse_search_worker.py  tryon_editorial_worker.py  tryon_video_worker.py  tryon_worker.py
apps/backend/tests/: test_apify_instagram_caption_gate.py  test_apify_instagram_fallback.py  test_apify_pinterest_actors.py  test_auth_jwt.py  test_composite_provider.py  test_fashn_direct_tryon.py  test_gemini_avatar.py  test_gemini_closet_attributes.py  test_gemini_fit_score.py  test_gemini_person_filter.py  test_gemini_tryon_editorial.py  test_health.py  test_reverse_search_service.py  test_reverse_search_worker_helpers.py  test_tryon_fashn_category.py  test_tryon_preprocess.py  test_visual_search_providers.py  test_zara_fetch.py  test_zara_query.py
apps/backend/tests/core/fit_score/: test_closet_snapshot.py
apps/backend/tests/rls/: test_fit_score_rls.py  test_rls_placeholder.py
apps/extension-wxt/: .env.example  OVERVIEW.md  README.md  package.json  tailwind.config.js  tsconfig.json  wxt.config.ts
apps/web/: OVERVIEW.md  README.md  next.config.mjs  package.json  tailwind.config.ts  vercel.json
patches/: wxt@0.20.22.patch
scripts/: seed-demo-friends.sql
supabase/: config.toml  seed.sql
(+111 files in other folders)
